    removes unused FileContext.getFileStatus(..) and fixes various javac
    warnings.  (szetszwo)

    HADOOP-10414. Incorrect property name for RefreshUserMappingProtocol in
    hadoop-policy.xml. (Joey Echeverria via atm)

Release 2.4.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES 

Release 2.4.0 - 2014-04-07 

  INCOMPATIBLE CHANGES

    HADOOP-8691. FsShell can print "Found xxx items" unnecessarily often.
    (Daryn Sharp via wheat9)

  NEW FEATURES

    HADOOP-10184. Hadoop Common changes required to support HDFS ACLs. (See
    breakdown of tasks below for features and contributors)

  IMPROVEMENTS

    HADOOP-10139. Update and improve the Single Cluster Setup document.
    (Akira Ajisaka via Arpit Agarwal)

    HADOOP-10295. Allow distcp to automatically identify the checksum type of 
    source files and use it for the target. (jing9 and Laurent Goujon)

    HADOOP-10333. Fix grammatical error in overview.html document.
    (René Nyffenegger via suresh)

    HADOOP-10343. Change info to debug log in LossyRetryInvocationHandler. (arpit)

    HADOOP-10348. Deprecate hadoop.ssl.configuration in branch-2, and remove
    it in trunk. (Haohui Mai via jing9)

    HADOOP-9454. Support multipart uploads for s3native. (Jordan Mendelson and
    Akira AJISAKA via atm)

    HADOOP-10374. InterfaceAudience annotations should have
    RetentionPolicy.RUNTIME (Enis Soztutar via Arpit Agarwal)

    HADOOP-10278. Refactor to make CallQueue pluggable. (Chris Li via
    Arpit Agarwal)

    HADOOP-10285. Admin interface to swap callqueue at runtime. (Chris Li via
    Arpit Agarwal)

    HADOOP-10314. The ls command help still shows outdated 0.16 format.
    (Rushabh S Shah via kihwal)

    HADOOP-10379. Protect authentication cookies with the HttpOnly and Secure
    flags. (wheat9)

    HADOOP-10211. Enable RPC protocol to negotiate SASL-QOP values between
    clients and servers. (Benoy Antony via Arpit Agarwal)
